terraform/infra/services/apps/http/manifests/test.yaml
## kubectl create namespace istio-ingress
#
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: app
#  labels:
#    istio.io/dataplane-mode: ambient # To add applications or namespaces to the mesh in ambient mode
#    istio.io/use-waypoint: waypoint # must match the waypoint's Gateway 'name'. By default, matches waypoint from the same namespace
#    #istio.io/use-waypoint-namespace: istio-system # allow apps Pods to access the waypoint from the istio-system namespace
#    istio.io/use-waypoint-namespace: app # allow apps Pods to access the waypoint from the istio-system namespace
#  annotations:
#    networking.istio.io/traffic-distribution: PreferSameZone # Prioritize endpoints by proximity: network, region, zone, then subzone. Traffic goes to the closest healthy endpoints first.
---
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: app
  labels:
    app: http
    service: http
  annotations:
    networking.istio.io/traffic-distribution: PreferSameZone 
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
      version: v1
  template:
    metadata:
      labels:
        app: http
        version: v1
        # istio.io/dataplane-mode: ambient # To add applications or namespaces to the mesh in ambient mode
    spec:
      serviceAccountName: http
      containers:
      - image: httpd:2.4.67
        imagePullPolicy: IfNotPresent
        name: http
        ports:
        - containerPort: 80
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: Gateway
#metadata:
#  name: gateway
#  namespace: istio-ingress
#spec:
#  gatewayClassName: istio
#  listeners:
#  - name: default
#    hostname: "*.example.com"
#    port: 80
#    protocol: HTTP
#    allowedRoutes:
#      namespaces:
#        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: app
spec:
  parentRefs:
  - name: gateway-public
    namespace: istio-ingress
    sectionName: https # precisa fazer bind no 'https' pois 'http' vai fazer apenas redirect para o https.
  hostnames: ["http.ricardoxyz.website"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: http
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: alpine
  namespace: app
  labels:
    app: alpine
    service: alpine
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: alpine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
      version: v1
  template:
    metadata:
      labels:
        app: alpine
        version: v1
    spec:
      serviceAccountName: alpine
      containers:
      - image: alpine:3.23.4
        imagePullPolicy: IfNotPresent
        command: ["sh", "-c", "apk add curl && watch -n 1 curl http://http:8000"] # curl http://http.app:8000
        name: alpine
        ports:
        - containerPort: 80
